--- a/parentForm/Properties/Resources.resx
+++ b/parentForm/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="prevention" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\prevention.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="disease-prevention (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\disease-prevention (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Icons8-Ios7-Very-Basic-Copy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons8-Ios7-Very-Basic-Copy.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,7 +148,7 @@
   <data name="Icons8-Ios7-Very-Basic-Help-Filled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Icons8-Ios7-Very-Basic-Help-Filled.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="disease-prevention (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\disease-prevention (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="prevention (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\prevention (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
